--- a/loading_model.ipynb
+++ b/loading_model.ipynb
@@ -9,9 +9,20 @@
     "Recently in class, we've been talking about _massive_ models. For instance, ResNet-152 has over 60 million parameters, and Google's JFT-300M was trained on 300 million images. For a two week project, training models comparable to these would be just a little difficult. Training some of these models takes millions of dollars, so instead of trying to dig into specific models, architectures, and datasets, I will go through how to load and apply these models. In this notebook, I'll load a model (squeezenet 1.0) and explore passing a few inputs to it, which is closer to a real world example of how to use these models. This notebook is not about the specific model. The procedure would work on other, bigger models. I chose squeezenet because it is a relatively small model that performs well, and I think we will talk about it sometime soon in class. Throughout, I mess around with some downloaded images. The original images can be found in the directory.\n",
     "\n",
     "\n",
-    "I'll also start exploring the model as a black-box function, trying to find how to break it. In doing this, I'll create a few images with added noise. I'll design this noise to fool the model. Here's a sneak peak of how the image classification model can be tricked:\n",
-    "\n",
-    "![image](./spoiler.png)\n",
+    "I'll also start exploring the model as a black-box function, trying to find how to break it. In doing this, I'll create a few images with added noise. I'll design this noise to fool the model. Here's a sneak peak of how the image classification model can be tricked:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](./spoiler.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "The left image is classified as an Irish Water spaniel, the middle is classified as a goldfish, and the right is neither. The results of the two left images should worry you! In the last section I go over how I made these images.\n"
    ]
