Using html for image rather than md

--- a/loading_model.ipynb
+++ b/loading_model.ipynb
@@ -12,7 +12,8 @@
     "I'll also start exploring the model as a black-box function, trying to find how to break it. In doing this, I'll create a few images with added noise. I'll design this noise to fool the model. Here's a sneak peak of how the image classification model can be tricked:\n",
     "\n",
     "\n",
-    "![image](./spoiler.png)"
+    "<img src=\"spoiler.png\" /> \n",
+    "<!-- ![image](./spoiler.png) -->"
    ]
   },
   {
