changing path description

--- a/loading_model.ipynb
+++ b/loading_model.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "\n",
     "<img src=\"spoiler.png\" /> \n",
-    "<!-- ![image](./spoiler.png) -->"
+    "\n",
+    "\n",
+    "![image](spoiler.png)"
    ]
   },
   {
