IPython for display

--- a/loading_model.ipynb
+++ b/loading_model.ipynb
@@ -3,33 +3,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# loading_model.ipynb\n",
+    "\n",
     "\n",
     "Recently in class, we've been talking about _massive_ models. For instance, ResNet-152 has over 60 million parameters, and Google's JFT-300M was trained on 300 million images. For a two week project, training models comparable to these would be just a little difficult. Training some of these models takes millions of dollars, so instead of trying to dig into specific models, architectures, and datasets, I will go through how to load and apply these models. In this notebook, I'll load a model (squeezenet 1.0) and explore passing a few inputs to it, which is closer to a real world example of how to use these models. This notebook is not about the specific model. The procedure would work on other, bigger models. I chose squeezenet because it is a relatively small model that performs well, and I think we will talk about it sometime soon in class. Throughout, I mess around with some downloaded images. The original images can be found in the directory.\n",
     "\n",
     "\n",
-    "I'll also start exploring the model as a black-box function, trying to find how to break it. In doing this, I'll create a few images with added noise. I'll design this noise to fool the model. Here's a sneak peak of how the image classification model can be tricked:\n",
-    "\n",
-    "\n"
+    "I'll also start exploring the model as a black-box function, trying to find how to break it. In doing this, I'll create a few images with added noise. I'll design this noise to fool the model. Here's a sneak peak of how the image classification model can be tricked:"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "<img src=\"./spoiler.png\" width=\"800\"/> \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "![](spoiler.png)"
+    "from IPython.display import Image\n",
+    "Image(filename=\"spoiler.png\")"
    ]
   },
   {
@@ -970,7 +966,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('pytorch_env')",
+   "display_name": "Python 3.9.13 ('torch')",
    "language": "python",
    "name": "python3"
   },
@@ -984,12 +980,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1201afab9563c2cffd677e7d442b1afb6f1711af05c8376bd4847b8bdbf9e9fc"
+    "hash": "54589b302c9d6f0f3f37f39b16f05c03c4e6222a0a85b6cf740203e734f7b12c"
    }
   }
  },
